2009-03-30  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_default_font__.m: New function: determine gnuplot's
	terminal dependent default font.
	* plot/__go_draw_figure__.m: Substitute gnuplot default font when
	"fontname" = "*".

2009-03-29  John W. Eaton  <jwe@octave.org>

	* testfun/Makefile.in (SOURCES): Add rundemos.m to the list.

2009-03-29  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: For eps output the bounding box should represent the
	figure's position.

2009-03-28  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Always set figure property "__plot_stream__"
	to the active gnuplot steam. Permits __gnuplot_get_var__ to return to
	proper result for all gnuplot streams.

2009-03-27  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Properly position the title for 3D plots
	when using the gnuplot (v4.3+) backend.

2009-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/expm.m: Fix order of outputs from balance.

2009-03-25  Kai Habel  <kai.habel@gmx.de>

	* general/gradient.m: Fix calculation for more than two
	dimensions.  Change interpretation of vector arguments from
	spacing to coordinates.  New tests.

2009-03-25  John W. Eaton  <jwe@octave.org>

	* mkdoc: Pass full file name to gethelp.
	* gethelp.cc (main): Handle second argument.  Write comment with
	full file name to output.

2009-03-24  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: When printing, pass scalar plot_stream
	to __gnuplot_draw_figure__, and close all plot streams when done.

2009-03-24  John W. Eaton  <jwe@octave.org>

	* general/isa.m: Handle parent classes.

2009-03-23  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Check that gnuplot has internal variable
	"GPVAL_TERMINALS".
	* plot/__gnuplot_has_feature__.m: Add "variable_GPVAL_TERMINALS".

2009-03-21  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Verify the gnuplot terminal is supported.
	* plot/__gnuplot_get_var__.m: Add function to get gnuplot variables.